Disable CSRF token verification for pusher controller
Signed-off-by: Meraj <meraj.enigma@gmail.com>

--- a/sample_app/Gemfile
+++ b/sample_app/Gemfile
@@ -19,6 +19,7 @@ gem 'fog'
 gem 'elasticsearch-model'
 gem 'elasticsearch-rails'
 gem 'pusher'
+gem 'inch', require: false
 
 group :development, :test do
   gem 'sqlite3',  '1.3.13'
